--- a/index.css
+++ b/index.css
@@ -1,48 +1,62 @@
-/*======= Font rengini #3C373B yapan bir yeni bir universal selector yaratın*/
-
+* {
+  color: #3c373b;
+  /* border-collapse: collapse; */
+  /* border: 3px rgb(255, 0, 0, 0.7) solid; */
+  /* background-color: rgb(0, 255, 0, 0.3); */
+}
 
 h1 {
-  font-family: 'Gaegu', cursive;
+  font-family: "Gaegu", cursive;
   margin: 20px 0;
-  /*=======  Font size'ı 60px yapın ve text'i ortalayın(center) */
-  font-size: 10px;
+  font-size: 60px;
+  text-align: center;
 }
 
-h2, h3, h4, h5, h6 {
-  font-family: 'Gaegu', cursive;
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Gaegu", cursive;
   margin-bottom: 0;
   padding: 0 10px;
-  /*=======  Font size'ı 30px yapın*/
-  font-size: 10px;
+  font-size: 30px;
 }
 
-/*======= Sayfadaki TÜM p tag'leri için aşağıdaki özellikleri içeren bir selector yaratın:
+p {
+  font-size: 16px;
+  font-family: "Roboto";
+  padding: 10px;
+  line-height: 1.4;
+}
 
-font-size: 16px;
-font-family: roboto;
-padding: 10px;
-line-height: 1.4;
-
-*/
-
-
-/*======= Sayfadaki TÜM imajlar için aşağıdaki özellikleri içeren bir selector yaratın:
-
+img {
   border-radius: 10px;
-
-*/
+}
 
 .content-row {
   display: flex;
 }
 
 .content-row div {
-  /*======= margin propery yaratın.  Değerini 20px olarak atayın*/
+  margin: 20px;
+}
+
+.content-img {
+}
+
+.content-img img {
+  max-width: 350px;
+  max-height: 350px;
 }
 
 .container {
-  /*======= width property yaratın. Değerini 750px olarak atayın */
+  width: 750px;
   margin: 0 auto;
+}
+
+.container header nav {
+  text-align: center;
 }
 
 .container header nav a {
@@ -54,17 +68,31 @@ line-height: 1.4;
   color: white;
   text-decoration: none;
   margin-bottom: 20px;
-   /*======= background property yaratın. Değerini #E79947 olarak atayınız.*/
-  
+  background: #e79947;
 }
 
 .container header nav a:hover {
-/*======= background property yaratın ve değeri white olsun.  Sonra, color property yaratın ve değerini #E79947 yapın. */
+  /*======= background property yaratın ve değeri white olsun.  Sonra, color property yaratın ve değerini yapın. */
+  background: white;
+  color: #e79947;
 }
 
-/*======= Hakkmızda bölümü için aşağıdaki stilleri içeren bir selector yaratın:
+.banner {
+  text-align: center;
+  padding: 20px 0;
+  background-color: lightgray;
+}
+
+.banner img {
+  width: 750px;
+}
+
+.about-section {
   margin-top: 20px;
-*/
+}
+
+.contact-section {
+}
 
 .contact-section {
   border-top: 1px dashed black;
@@ -76,20 +104,19 @@ line-height: 1.4;
   margin: 0 0 10px 0;
 }
 
-/*======= contact-section class'da address tag'i için aşağdıaki stilleri içeren bir selector yaratın:
-   line-height: 2;
-*/
+address {
+  line-height: 2;
+}
 
 footer {
   width: 100%;
-  background: #E79947;
+  background: #e79947;
   border-top: 1px dashed white;
 }
 
-footer .footer-content { 
-  margin: 0 auto; 
-  /*======= width property yaratın. Değerini 750px olarak atayın */
-  
+footer .footer-content {
+  margin: 0 auto;
+  width: 750px;
 }
 
 footer .footer-content h3 {
@@ -101,22 +128,21 @@ footer nav {
   display: flex;
 }
 
-/*======= Footer'daki anchor tag için aşağıdaki stilleri içeren bir selector yaratın:
+footer nav a {
   margin: 10px;
   color: black;
   text-decoration: underline;
-*/
+}
 
+footer nav a:hover {
+  color: white;
+}
 
 footer nav a:first-child {
   margin-left: 0;
 }
 
-/*======= Footer nav'daki anchor tag için aşağıdaki stilleri içeren bir hover state yaratın:
-  color: white;
-*/
-
 footer .footer-content .copyright {
   padding: 20px 0;
-   /*======= metni ortalayacak kodu yazın */
+  text-align: center;
 }
